manifests/local/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plattr-keycloak
  namespace: plattr-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plattr-keycloak
  template:
    metadata:
      labels:
        app: plattr-keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0
          command: ["/opt/keycloak/bin/kc.sh", "start-dev"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: plattr-keycloak
  namespace: plattr-local
spec:
  selector:
    app: plattr-keycloak
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plattr-keycloak
  namespace: plattr-local
spec:
  entryPoints:
    - keycloak
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plattr-keycloak
          port: 8080
